[tool.poetry]
name = "jptr-runner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jptr_runner"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jupyterlab = "==4.0.3"
numpy = "==1.24.3"
pandas = "==2.0.3"
seaborn = "==0.12.2"
matplotlib = "==3.7.2"
tensorflow = "==2.13.0"
scipy = "==1.11.1"
keras = "==2.13.1"
scikit-learn = "==1.3.0"
scrapy = "==2.9.0"
beautifulsoup4 = "==4.12.2"
lightgbm = "==4.0.0"
ramp = "==0.1.4"
bob = "==12.0.0"
xgboost = "==1.7.6"
opencv-python = "==4.8.0.74"
mahotas = "==1.4.13"
requests = "==2.31.0"
pytest = "==7.4.0"
plotly = "==5.15.0"
pydot = "==1.4.2"
nltk = "==3.8.1"
spacy = "==3.6.0"
bokeh = "==3.2.1"
pinecone-client = "==2.2.2"
openai = {version = "0.27.8", extras = ["embeddings"]}
psycopg2-binary = "==2.9.6"
redis = "==4.6.0"
ipywidgets = "^8.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
